tests/baselines/reference/classExtendsInterfaceInExpression.errors.txt
classExtendsInterfaceInExpression.ts(4,3): error TS2322: Type 'null' is not assignable to type 'new () => Object'.
classExtendsInterfaceInExpression.ts(7,25): error TS2693: 'A' only refers to a type, but is being used as a value here.


==== classExtendsInterfaceInExpression.ts (2 errors) ====
    interface A {}
    
    function factory(a: any): {new(): Object} {
      return null;
      ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'new () => Object'.
    }
    
    class C extends factory(A) {}
                            ~
!!! error TS2693: 'A' only refers to a type, but is being used as a value here.
    